@startuml
skinparam classbackgroundcolor #ffffff
skinparam classarrowcolor #000000
skinparam classdiamondbackgroundcolor #ffffff
skinparam classdiamondbordercolor #000000
skinparam classbordercolor #000000
skinparam classfontsize 18
skinparam classfontname "Liberation Mono"
skinparam classattributefontsize 18
skinparam classattributefontname "Liberation Mono"
skinparam classAttributeIconSize 0
hide circle

Bicycle <|-- ElectricBicycle
Bicycle <|-- CargoBicycle

class Bicycle {
    - frameSize: double
    - nGears: int
    - currentGear: int
    
    + Bicycle(frameSize: double, nGears: int)
    
}

class ElectricBicycle {
    - batteryCapacity: int
    - currentCharge: double
    
    + ElectricBicycle(frameSize: double, nGears: int,
       batteryCapacity: int)
}

class CargoBicycle {
    - maxLoad: double
    - currentLoad: double
    
    + CargoBicycle(frameSize: double, nGears: int,
        maxLoad: double)
}

@enduml
